# lua-clangc

./: Makefile.am  README.md  TODO  clangc.c  compile.sh  configure.ac  constants.c  constants.h  enums.rb  implementation.md  indexlib.c  indexlib.h  loader.lua  macros.h  test.lua  translationunitlib.c  translationunitlib.h
src/: clangc.c  clangc_core.la  clangc_module_functions.c  clangc_module_functions.h  constants.c  constants.h  core.c  indexlib.c  init.lua.in  lua_compat.h  macros.h
test/: loader.lua  simpleloader.lua  test.lua  utils.lua
tools/: clang_versions_diff.lua  enums.lua  enums.rb  print_clang_35_functions_names.lua  status.rb  toolbox.lua
